// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debugger build teal sourcemaps 1`] = `
AVMDebuggerSourceMap {
  "txnGroupSources": [
    AVMDebuggerSourceMapEntry {
      "location": "dummy",
      "programHash": "p0zHRDBy7V/S2TDcAaXYEd2OF8KSxV/1y0ceYEL6qxU=",
    },
    AVMDebuggerSourceMapEntry {
      "location": "dummy",
      "programHash": "p0zHRDBy7V/S2TDcAaXYEd2OF8KSxV/1y0ceYEL6qxU=",
    },
  ],
}
`;

exports[`debugger utils build teal sourcemaps 1`] = `
AVMDebuggerSourceMap {
  "txnGroupSources": [
    AVMDebuggerSourceMapEntry {
      "location": "dummy",
      "programHash": "EC1P8unO+zjVbdF8XZOs1rp+uaGNk7vXtZ/IYsN/sug=",
    },
    AVMDebuggerSourceMapEntry {
      "location": "dummy",
      "programHash": "EC1P8unO+zjVbdF8XZOs1rp+uaGNk7vXtZ/IYsN/sug=",
    },
  ],
}
`;
